--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
       </div>
     </header>
     <!-- Strip 1: Fullscreen Slideshow -->
-    <!-- Tip: Use a visually distinct, high-resolution image for best parallax effect -->
-    <section class="strip-1" data-stellar-background-ratio="0.5" style="background-image: url('images/parallax_bg.jpg'), linear-gradient(135deg, #e0c3fc 0%, #8ec5fc 100%); background-size: cover; background-position: center; background-repeat: no-repeat;">
+    <section class="strip-1">
       <div class="strip-1-inner">
         <div class="strip-1-slideshow owl-carousel">
           <div class="strip-1-slide"><img src="images/img_1.jpg" alt="Gallery Image 1"></div>
@@ -128,22 +127,22 @@
         </div>
         <div class="strip-3-gallery row justify-content-center">
           <div class="col-12 col-sm-6 col-md-4 col-lg-2 mb-4">
-            <img src="images/fashion_1.jpg" alt="Fashion 1" class="strip-3-img">
+            <img src="images/img_1.jpg" alt="Fashion 1" class="strip-3-img">
           </div>
           <div class="col-12 col-sm-6 col-md-4 col-lg-2 mb-4">
-            <img src="images/fashion_2.jpg" alt="Fashion 2" class="strip-3-img">
+            <img src="images/img_2.jpg" alt="Fashion 2" class="strip-3-img">
           </div>
           <div class="col-12 col-sm-6 col-md-4 col-lg-2 mb-4">
-            <img src="images/fashion_3.jpg" alt="Fashion 3" class="strip-3-img">
+            <img src="images/img_3.jpg" alt="Fashion 3" class="strip-3-img">
           </div>
           <div class="col-12 col-sm-6 col-md-4 col-lg-2 mb-4">
-            <img src="images/fashion_4.jpg" alt="Fashion 4" class="strip-3-img">
+            <img src="images/img_4.jpg" alt="Fashion 4" class="strip-3-img">
           </div>
           <div class="col-12 col-sm-6 col-md-4 col-lg-2 mb-4">
-            <img src="images/fashion_5.jpg" alt="Fashion 5" class="strip-3-img">
+            <img src="images/img_5.jpg" alt="Fashion 5" class="strip-3-img">
           </div>
           <div class="col-12 col-sm-6 col-md-4 col-lg-2 mb-4">
-            <img src="images/fashion_6.jpg" alt="Fashion 6" class="strip-3-img">
+            <img src="images/img_6.jpg" alt="Fashion 6" class="strip-3-img">
           </div>
         </div>
         <div class="strip-3-explore text-center mt-4">
