--- a/index.html
+++ b/index.html
@@ -127,32 +127,32 @@
         </div>
         <div id="fashion-gallery" class="strip-3-gallery row justify-content-center">
           <div class="col-12 col-sm-6 col-md-4 col-lg-2 mb-4">
-            <a href="images/img_1.jpg" class="strip-3-img-link" data-lg-size="1406-1390">
+            <a href="images/img_1.jpg" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion">
               <img src="images/img_1.jpg" alt="Fashion 1" class="strip-3-img">
             </a>
           </div>
           <div class="col-12 col-sm-6 col-md-4 col-lg-2 mb-4">
-            <a href="images/img_2.jpg" class="strip-3-img-link" data-lg-size="1406-1390">
+            <a href="images/img_2.jpg" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion">
               <img src="images/img_2.jpg" alt="Fashion 2" class="strip-3-img">
             </a>
           </div>
           <div class="col-12 col-sm-6 col-md-4 col-lg-2 mb-4">
-            <a href="images/img_3.jpg" class="strip-3-img-link" data-lg-size="1406-1390">
+            <a href="images/img_3.jpg" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion">
               <img src="images/img_3.jpg" alt="Fashion 3" class="strip-3-img">
             </a>
           </div>
           <div class="col-12 col-sm-6 col-md-4 col-lg-2 mb-4">
-            <a href="images/img_4.jpg" class="strip-3-img-link" data-lg-size="1406-1390">
+            <a href="images/img_4.jpg" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion">
               <img src="images/img_4.jpg" alt="Fashion 4" class="strip-3-img">
             </a>
           </div>
           <div class="col-12 col-sm-6 col-md-4 col-lg-2 mb-4">
-            <a href="images/img_5.jpg" class="strip-3-img-link" data-lg-size="1406-1390">
+            <a href="images/img_5.jpg" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion">
               <img src="images/img_5.jpg" alt="Fashion 5" class="strip-3-img">
             </a>
           </div>
           <div class="col-12 col-sm-6 col-md-4 col-lg-2 mb-4">
-            <a href="images/img_6.jpg" class="strip-3-img-link" data-lg-size="1406-1390">
+            <a href="images/img_6.jpg" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion">
               <img src="images/img_6.jpg" alt="Fashion 6" class="strip-3-img">
             </a>
           </div>
@@ -590,6 +590,24 @@
       }
       $(window).on('scroll', growOnScroll);
       growOnScroll();
+      // Initialize LightGallery for Fashion Gallery
+      if ($('#fashion-gallery').length && typeof $.fn.lightGallery === 'function') {
+        $('#fashion-gallery').lightGallery({
+          selector: '.strip-3-img-link',
+          thumbnail: true,
+          download: false,
+          mode: 'lg-fade',
+          share: false,
+          getCaptionFromTitleOrAlt: false,
+          addClass: 'fashion-gallery-lightbox',
+          plugins: [lgZoom, lgThumbnail],
+          licenseKey: '0000-0000-000-0000',
+          // When gallery is closed, redirect to single.html
+          afterClose: function() {
+            window.location.href = 'single.html';
+          }
+        });
+      }
     });
   </script>
   <script>
