--- a/index.html
+++ b/index.html
@@ -339,25 +339,43 @@
       font-family: 'Montserrat', Arial, sans-serif;
     }
     .strip-3-gallery {
-      display: flex;
-      flex-wrap: wrap;
+      display: grid;
+      grid-template-columns: repeat(6, 1fr);
+      gap: 24px;
       justify-content: center;
       margin-bottom: 24px;
     }
-    .strip-3-img {
-      width: 100%;
-      max-width: 180px;
+    .strip-3-img-link {
+      display: block;
+      position: relative;
+      overflow: hidden;
       border-radius: 14px;
       box-shadow: 0 4px 18px rgba(0,0,0,0.10);
-      object-fit: cover;
-      transition: transform 0.2s;
-      cursor: pointer;
-      display: block;
-      margin: 0 auto;
+      transition: box-shadow 0.2s;
     }
-    .strip-3-img:hover {
-      transform: scale(1.05);
+    .strip-3-img-link:hover {
       box-shadow: 0 8px 32px rgba(0,0,0,0.15);
+    }
+    .strip-3-img {
+      width: 100%;
+      height: 180px;
+      object-fit: cover;
+      border-radius: 14px;
+      transition: transform 0.2s;
+      display: block;
+    }
+    .strip-3-img-link:hover .strip-3-img {
+      transform: scale(1.05);
+    }
+    @media (max-width: 991.98px) {
+      .strip-3-gallery {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 12px;
+      }
+      .strip-3-img {
+        height: 120px;
+        border-radius: 10px;
+      }
     }
     .btn-explore {
       background: #bfa76a;
