--- a/index.html
+++ b/index.html
@@ -125,37 +125,25 @@
           <h2 class="strip-3-title">Fashion Gallery</h2>
           <p class="strip-3-desc">Explore our fashion gallery.</p>
         </div>
-        <div id="fashion-gallery" class="strip-3-gallery row justify-content-center">
-          <div class="col-12 col-sm-6 col-md-4 col-lg-2 mb-4">
-            <a href="images/img_1.jpg" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion">
-              <img src="images/img_1.jpg" alt="Fashion 1" class="strip-3-img">
-            </a>
-          </div>
-          <div class="col-12 col-sm-6 col-md-4 col-lg-2 mb-4">
-            <a href="images/img_2.jpg" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion">
-              <img src="images/img_2.jpg" alt="Fashion 2" class="strip-3-img">
-            </a>
-          </div>
-          <div class="col-12 col-sm-6 col-md-4 col-lg-2 mb-4">
-            <a href="images/img_3.jpg" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion">
-              <img src="images/img_3.jpg" alt="Fashion 3" class="strip-3-img">
-            </a>
-          </div>
-          <div class="col-12 col-sm-6 col-md-4 col-lg-2 mb-4">
-            <a href="images/img_4.jpg" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion">
-              <img src="images/img_4.jpg" alt="Fashion 4" class="strip-3-img">
-            </a>
-          </div>
-          <div class="col-12 col-sm-6 col-md-4 col-lg-2 mb-4">
-            <a href="images/img_5.jpg" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion">
-              <img src="images/img_5.jpg" alt="Fashion 5" class="strip-3-img">
-            </a>
-          </div>
-          <div class="col-12 col-sm-6 col-md-4 col-lg-2 mb-4">
-            <a href="images/img_6.jpg" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion">
-              <img src="images/img_6.jpg" alt="Fashion 6" class="strip-3-img">
-            </a>
-          </div>
+        <div id="fashion-gallery" class="strip-3-gallery">
+          <a href="images/img_1.jpg" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion">
+            <img src="images/img_1.jpg" alt="Fashion 1" class="strip-3-img">
+          </a>
+          <a href="images/img_2.jpg" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion">
+            <img src="images/img_2.jpg" alt="Fashion 2" class="strip-3-img">
+          </a>
+          <a href="images/img_3.jpg" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion">
+            <img src="images/img_3.jpg" alt="Fashion 3" class="strip-3-img">
+          </a>
+          <a href="images/img_4.jpg" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion">
+            <img src="images/img_4.jpg" alt="Fashion 4" class="strip-3-img">
+          </a>
+          <a href="images/img_5.jpg" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion">
+            <img src="images/img_5.jpg" alt="Fashion 5" class="strip-3-img">
+          </a>
+          <a href="images/img_6.jpg" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion">
+            <img src="images/img_6.jpg" alt="Fashion 6" class="strip-3-img">
+          </a>
         </div>
         <div class="strip-3-explore text-center mt-4">
           <a href="single.html" class="btn btn-lg btn-explore">Explore</a>
