--- a/index.html
+++ b/index.html
@@ -151,6 +151,72 @@
       </div>
     </section>
     <!-- End Strip 3 -->
+    <!-- Strip 4: Jewellery Gallery Section -->
+    <section class="strip-4">
+      <div class="strip-4-inner">
+        <div class="strip-4-header text-center">
+          <h2 class="strip-4-title">Jewellery Gallery</h2>
+          <p class="strip-4-desc">Explore our jewellery gallery.</p>
+        </div>
+        <div id="jewellery-gallery" class="strip-4-gallery strip-3-gallery">
+          <a href="images/jew_1.jpg" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery">
+            <img src="images/jew_1.jpg" alt="Jewellery 1" class="strip-4-img strip-3-img">
+          </a>
+          <a href="images/jew_2.jpg" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery">
+            <img src="images/jew_2.jpg" alt="Jewellery 2" class="strip-4-img strip-3-img">
+          </a>
+          <a href="images/jew_3.jpg" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery">
+            <img src="images/jew_3.jpg" alt="Jewellery 3" class="strip-4-img strip-3-img">
+          </a>
+          <a href="images/jew_4.jpg" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery">
+            <img src="images/jew_4.jpg" alt="Jewellery 4" class="strip-4-img strip-3-img">
+          </a>
+          <a href="images/jew_5.jpg" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery">
+            <img src="images/jew_5.jpg" alt="Jewellery 5" class="strip-4-img strip-3-img">
+          </a>
+          <a href="images/jew_6.jpg" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery">
+            <img src="images/jew_6.jpg" alt="Jewellery 6" class="strip-4-img strip-3-img">
+          </a>
+        </div>
+        <div class="strip-4-explore text-center mt-4">
+          <a href="single.html" class="btn btn-lg btn-explore">Explore</a>
+        </div>
+      </div>
+    </section>
+    <!-- End Strip 4 -->
+    <!-- Strip 5: Food Gallery Section -->
+    <section class="strip-5">
+      <div class="strip-5-inner">
+        <div class="strip-5-header text-center">
+          <h2 class="strip-5-title">Food Gallery</h2>
+          <p class="strip-5-desc">Explore our food gallery.</p>
+        </div>
+        <div id="food-gallery" class="strip-5-gallery strip-3-gallery">
+          <a href="images/food_1.jpg" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food">
+            <img src="images/food_1.jpg" alt="Food 1" class="strip-5-img strip-3-img">
+          </a>
+          <a href="images/food_2.jpg" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food">
+            <img src="images/food_2.jpg" alt="Food 2" class="strip-5-img strip-3-img">
+          </a>
+          <a href="images/food_3.jpg" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food">
+            <img src="images/food_3.jpg" alt="Food 3" class="strip-5-img strip-3-img">
+          </a>
+          <a href="images/food_4.jpg" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food">
+            <img src="images/food_4.jpg" alt="Food 4" class="strip-5-img strip-3-img">
+          </a>
+          <a href="images/food_5.jpg" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food">
+            <img src="images/food_5.jpg" alt="Food 5" class="strip-5-img strip-3-img">
+          </a>
+          <a href="images/food_6.jpg" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food">
+            <img src="images/food_6.jpg" alt="Food 6" class="strip-5-img strip-3-img">
+          </a>
+        </div>
+        <div class="strip-5-explore text-center mt-4">
+          <a href="single.html" class="btn btn-lg btn-explore">Explore</a>
+        </div>
+      </div>
+    </section>
+    <!-- End Strip 5 -->
     <!-- Footer Start -->
     <footer class="site-footer-custom redesigned-footer">
       <div class="container-fluid">
@@ -610,6 +676,38 @@
           actualSize: true,
           getCaptionFromTitleOrAlt: true,
           addClass: 'fashion-gallery-lightbox'
+        });
+      }
+      // Initialize LightGallery for Jewellery Gallery
+      if ($('#jewellery-gallery').length && typeof $.fn.lightGallery === 'function') {
+        $('#jewellery-gallery').lightGallery({
+          selector: '.strip-4-img-link',
+          thumbnail: true,
+          download: false,
+          mode: 'lg-fade',
+          share: true,
+          zoom: true,
+          fullScreen: true,
+          autoplay: true,
+          actualSize: true,
+          getCaptionFromTitleOrAlt: true,
+          addClass: 'jewellery-gallery-lightbox'
+        });
+      }
+      // Initialize LightGallery for Food Gallery
+      if ($('#food-gallery').length && typeof $.fn.lightGallery === 'function') {
+        $('#food-gallery').lightGallery({
+          selector: '.strip-5-img-link',
+          thumbnail: true,
+          download: false,
+          mode: 'lg-fade',
+          share: true,
+          zoom: true,
+          fullScreen: true,
+          autoplay: true,
+          actualSize: true,
+          getCaptionFromTitleOrAlt: true,
+          addClass: 'food-gallery-lightbox'
         });
       }
     });
