--- a/index.html
+++ b/index.html
@@ -159,23 +159,23 @@
           <p class="strip-4-desc">Explore our jewellery gallery.</p>
         </div>
         <div id="jewellery-gallery" class="strip-4-gallery strip-3-gallery">
-          <a href="images/jew_1.jpg" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery">
-            <img src="images/jew_1.jpg" alt="Jewellery 1" class="strip-4-img strip-3-img">
+          <a href="images/img_1.jpg" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery">
+            <img src="images/img_1.jpg" alt="Jewellery 1" class="strip-4-img strip-3-img">
           </a>
-          <a href="images/jew_2.jpg" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery">
-            <img src="images/jew_2.jpg" alt="Jewellery 2" class="strip-4-img strip-3-img">
+          <a href="images/img_2.jpg" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery">
+            <img src="images/img_2.jpg" alt="Jewellery 2" class="strip-4-img strip-3-img">
           </a>
-          <a href="images/jew_3.jpg" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery">
-            <img src="images/jew_3.jpg" alt="Jewellery 3" class="strip-4-img strip-3-img">
+          <a href="images/img_3.jpg" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery">
+            <img src="images/img_3.jpg" alt="Jewellery 3" class="strip-4-img strip-3-img">
           </a>
-          <a href="images/jew_4.jpg" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery">
-            <img src="images/jew_4.jpg" alt="Jewellery 4" class="strip-4-img strip-3-img">
+          <a href="images/img_4.jpg" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery">
+            <img src="images/img_4.jpg" alt="Jewellery 4" class="strip-4-img strip-3-img">
           </a>
-          <a href="images/jew_5.jpg" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery">
-            <img src="images/jew_5.jpg" alt="Jewellery 5" class="strip-4-img strip-3-img">
+          <a href="images/img_5.jpg" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery">
+            <img src="images/img_5.jpg" alt="Jewellery 5" class="strip-4-img strip-3-img">
           </a>
-          <a href="images/jew_6.jpg" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery">
-            <img src="images/jew_6.jpg" alt="Jewellery 6" class="strip-4-img strip-3-img">
+          <a href="images/img_6.jpg" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery">
+            <img src="images/img_6.jpg" alt="Jewellery 6" class="strip-4-img strip-3-img">
           </a>
         </div>
         <div class="strip-4-explore text-center mt-4">
@@ -192,23 +192,23 @@
           <p class="strip-5-desc">Explore our food gallery.</p>
         </div>
         <div id="food-gallery" class="strip-5-gallery strip-3-gallery">
-          <a href="images/food_1.jpg" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food">
-            <img src="images/food_1.jpg" alt="Food 1" class="strip-5-img strip-3-img">
+          <a href="images/img_1.jpg" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food">
+            <img src="images/img_1.jpg" alt="Food 1" class="strip-5-img strip-3-img">
           </a>
-          <a href="images/food_2.jpg" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food">
-            <img src="images/food_2.jpg" alt="Food 2" class="strip-5-img strip-3-img">
+          <a href="images/img_2.jpg" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food">
+            <img src="images/img_2.jpg" alt="Food 2" class="strip-5-img strip-3-img">
           </a>
-          <a href="images/food_3.jpg" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food">
-            <img src="images/food_3.jpg" alt="Food 3" class="strip-5-img strip-3-img">
+          <a href="images/img_3.jpg" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food">
+            <img src="images/img_3.jpg" alt="Food 3" class="strip-5-img strip-3-img">
           </a>
-          <a href="images/food_4.jpg" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food">
-            <img src="images/food_4.jpg" alt="Food 4" class="strip-5-img strip-3-img">
+          <a href="images/img_4.jpg" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food">
+            <img src="images/img_4.jpg" alt="Food 4" class="strip-5-img strip-3-img">
           </a>
-          <a href="images/food_5.jpg" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food">
-            <img src="images/food_5.jpg" alt="Food 5" class="strip-5-img strip-3-img">
+          <a href="images/img_5.jpg" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food">
+            <img src="images/img_5.jpg" alt="Food 5" class="strip-5-img strip-3-img">
           </a>
-          <a href="images/food_6.jpg" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food">
-            <img src="images/food_6.jpg" alt="Food 6" class="strip-5-img strip-3-img">
+          <a href="images/img_6.jpg" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food">
+            <img src="images/img_6.jpg" alt="Food 6" class="strip-5-img strip-3-img">
           </a>
         </div>
         <div class="strip-5-explore text-center mt-4">
