--- a/index.html
+++ b/index.html
@@ -152,13 +152,13 @@
     </section>
     <!-- End Strip 3 -->
     <!-- Strip 4: Jewellery Gallery Section -->
-    <section class="strip-4">
-      <div class="strip-4-inner">
-        <div class="strip-4-header text-center">
-          <h2 class="strip-4-title">Jewellery Gallery</h2>
-          <p class="strip-4-desc">Explore our jewellery gallery.</p>
+    <section class="strip-4" style="background: #f8f6f2; padding: 64px 0 48px 0;">
+      <div class="strip-4-inner" style="max-width: 1200px; margin: 0 auto; padding: 0 18px;">
+        <div class="strip-4-header text-center" style="margin-bottom: 32px; padding-top: 32px;">
+          <h2 class="strip-4-title" style="font-family: 'Playfair Display', serif; font-size: 2.2rem; font-weight: 700; color: #bfa76a; margin-bottom: 12px; letter-spacing: 0.01em;">Jewellery Gallery</h2>
+          <p class="strip-4-desc" style="font-size: 1.15rem; color: #222; margin-bottom: 0; font-family: 'Montserrat', Arial, sans-serif;">Explore our jewellery gallery.</p>
         </div>
-        <div id="jewellery-gallery" class="strip-4-gallery strip-3-gallery">
+        <div id="jewellery-gallery" class="strip-3-gallery" style="margin-bottom: 24px;">
           <a href="images/img_1.jpg" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery">
             <img src="images/img_1.jpg" alt="Jewellery 1" class="strip-4-img strip-3-img">
           </a>
@@ -178,20 +178,20 @@
             <img src="images/img_6.jpg" alt="Jewellery 6" class="strip-4-img strip-3-img">
           </a>
         </div>
-        <div class="strip-4-explore text-center mt-4">
+        <div class="strip-4-explore text-center mt-4" style="padding-bottom: 32px;">
           <a href="single.html" class="btn btn-lg btn-explore">Explore</a>
         </div>
       </div>
     </section>
     <!-- End Strip 4 -->
     <!-- Strip 5: Food Gallery Section -->
-    <section class="strip-5">
-      <div class="strip-5-inner">
-        <div class="strip-5-header text-center">
-          <h2 class="strip-5-title">Food Gallery</h2>
-          <p class="strip-5-desc">Explore our food gallery.</p>
+    <section class="strip-5" style="background: #f8f6f2; padding: 64px 0 48px 0;">
+      <div class="strip-5-inner" style="max-width: 1200px; margin: 0 auto; padding: 0 18px;">
+        <div class="strip-5-header text-center" style="margin-bottom: 32px; padding-top: 32px;">
+          <h2 class="strip-5-title" style="font-family: 'Playfair Display', serif; font-size: 2.2rem; font-weight: 700; color: #bfa76a; margin-bottom: 12px; letter-spacing: 0.01em;">Food Gallery</h2>
+          <p class="strip-5-desc" style="font-size: 1.15rem; color: #222; margin-bottom: 0; font-family: 'Montserrat', Arial, sans-serif;">Explore our food gallery.</p>
         </div>
-        <div id="food-gallery" class="strip-5-gallery strip-3-gallery">
+        <div id="food-gallery" class="strip-3-gallery" style="margin-bottom: 24px;">
           <a href="images/img_1.jpg" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food">
             <img src="images/img_1.jpg" alt="Food 1" class="strip-5-img strip-3-img">
           </a>
@@ -211,7 +211,7 @@
             <img src="images/img_6.jpg" alt="Food 6" class="strip-5-img strip-3-img">
           </a>
         </div>
-        <div class="strip-5-explore text-center mt-4">
+        <div class="strip-5-explore text-center mt-4" style="padding-bottom: 32px;">
           <a href="single.html" class="btn btn-lg btn-explore">Explore</a>
         </div>
       </div>
