--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     </section>
     <!-- End Strip 3 -->
     <!-- Strip 4: Jewellery Gallery Section -->
-    <section class="strip-4" style="background: #f8f6f2; padding: 64px 0 48px 0;">
+    <section class="strip-4" style="background: #fff; padding: 64px 0 48px 0;">
       <div class="strip-4-inner" style="max-width: 1200px; margin: 0 auto; padding: 0 18px;">
         <div class="strip-4-header text-center" style="margin-bottom: 32px; padding-top: 32px;">
           <h2 class="strip-4-title" style="font-family: 'Playfair Display', serif; font-size: 2.2rem; font-weight: 700; color: #bfa76a; margin-bottom: 12px; letter-spacing: 0.01em;">Jewellery Gallery</h2>
