--- a/index.html
+++ b/index.html
@@ -144,6 +144,18 @@
           <a href="images/img_6.jpg" class="strip-3-img-link" data-lg-size="1406-1390" data-gallery="fashion">
             <img src="images/img_6.jpg" alt="Fashion 6" class="strip-3-img">
           </a>
+          <!-- Hidden images for full gallery (Fashion) -->
+          <!-- Only first 6 images are visible, rest are hidden for LightGallery -->
+          <a href="images/img_7.jpg" class="strip-3-img-link d-none" data-lg-size="1406-1390" data-gallery="fashion"><img src="images/img_7.jpg" alt="Fashion 7" class="strip-3-img"></a>
+          <a href="images/img_8.jpg" class="strip-3-img-link d-none" data-lg-size="1406-1390" data-gallery="fashion"><img src="images/img_8.jpg" alt="Fashion 8" class="strip-3-img"></a>
+          <a href="images/img_9.jpg" class="strip-3-img-link d-none" data-lg-size="1406-1390" data-gallery="fashion"><img src="images/img_9.jpg" alt="Fashion 9" class="strip-3-img"></a>
+          <!-- ...existing code for images 10-50... -->
+          <!-- Example for images 10-50 -->
+          <a href="images/img_10.jpg" class="strip-3-img-link d-none" data-lg-size="1406-1390" data-gallery="fashion"><img src="images/img_10.jpg" alt="Fashion 10" class="strip-3-img"></a>
+          <!-- Repeat for images 11-50 -->
+          <a href="images/img_11.jpg" class="strip-3-img-link d-none" data-lg-size="1406-1390" data-gallery="fashion"><img src="images/img_11.jpg" alt="Fashion 11" class="strip-3-img"></a>
+          <!-- ... -->
+          <a href="images/img_50.jpg" class="strip-3-img-link d-none" data-lg-size="1406-1390" data-gallery="fashion"><img src="images/img_50.jpg" alt="Fashion 50" class="strip-3-img"></a>
         </div>
         <div class="strip-3-explore text-center mt-4">
           <a href="single.html" class="btn btn-lg btn-explore">Explore</a>
@@ -177,6 +189,16 @@
           <a href="images/img_6.jpg" class="strip-4-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="jewellery">
             <img src="images/img_6.jpg" alt="Jewellery 6" class="strip-4-img strip-3-img">
           </a>
+          <!-- Hidden images for full gallery (Jewellery) -->
+          <a href="images/img_7.jpg" class="strip-4-img-link strip-3-img-link d-none" data-lg-size="1406-1390" data-gallery="jewellery"><img src="images/img_7.jpg" alt="Jewellery 7" class="strip-4-img strip-3-img"></a>
+          <a href="images/img_8.jpg" class="strip-4-img-link strip-3-img-link d-none" data-lg-size="1406-1390" data-gallery="jewellery"><img src="images/img_8.jpg" alt="Jewellery 8" class="strip-4-img strip-3-img"></a>
+          <a href="images/img_9.jpg" class="strip-4-img-link strip-3-img-link d-none" data-lg-size="1406-1390" data-gallery="jewellery"><img src="images/img_9.jpg" alt="Jewellery 9" class="strip-4-img strip-3-img"></a>
+          <!-- ...existing code for images 10-50... -->
+          <a href="images/img_10.jpg" class="strip-4-img-link strip-3-img-link d-none" data-lg-size="1406-1390" data-gallery="jewellery"><img src="images/img_10.jpg" alt="Jewellery 10" class="strip-4-img strip-3-img"></a>
+          <!-- Repeat for images 11-50 -->
+          <a href="images/img_11.jpg" class="strip-4-img-link strip-3-img-link d-none" data-lg-size="1406-1390" data-gallery="jewellery"><img src="images/img_11.jpg" alt="Jewellery 11" class="strip-4-img strip-3-img"></a>
+          <!-- ... -->
+          <a href="images/img_50.jpg" class="strip-4-img-link strip-3-img-link d-none" data-lg-size="1406-1390" data-gallery="jewellery"><img src="images/img_50.jpg" alt="Jewellery 50" class="strip-4-img strip-3-img"></a>
         </div>
         <div class="strip-4-explore text-center mt-4" style="padding-bottom: 32px;">
           <a href="single.html" class="btn btn-lg btn-explore">Explore</a>
@@ -210,6 +232,16 @@
           <a href="images/img_6.jpg" class="strip-5-img-link strip-3-img-link" data-lg-size="1406-1390" data-gallery="food">
             <img src="images/img_6.jpg" alt="Food 6" class="strip-5-img strip-3-img">
           </a>
+          <!-- Hidden images for full gallery (Food) -->
+          <a href="images/img_7.jpg" class="strip-5-img-link strip-3-img-link d-none" data-lg-size="1406-1390" data-gallery="food"><img src="images/img_7.jpg" alt="Food 7" class="strip-5-img strip-3-img"></a>
+          <a href="images/img_8.jpg" class="strip-5-img-link strip-3-img-link d-none" data-lg-size="1406-1390" data-gallery="food"><img src="images/img_8.jpg" alt="Food 8" class="strip-5-img strip-3-img"></a>
+          <a href="images/img_9.jpg" class="strip-5-img-link strip-3-img-link d-none" data-lg-size="1406-1390" data-gallery="food"><img src="images/img_9.jpg" alt="Food 9" class="strip-5-img strip-3-img"></a>
+          <!-- ...existing code for images 10-50... -->
+          <a href="images/img_10.jpg" class="strip-5-img-link strip-3-img-link d-none" data-lg-size="1406-1390" data-gallery="food"><img src="images/img_10.jpg" alt="Food 10" class="strip-5-img strip-3-img"></a>
+          <!-- Repeat for images 11-50 -->
+          <a href="images/img_11.jpg" class="strip-5-img-link strip-3-img-link d-none" data-lg-size="1406-1390" data-gallery="food"><img src="images/img_11.jpg" alt="Food 11" class="strip-5-img strip-3-img"></a>
+          <!-- ... -->
+          <a href="images/img_50.jpg" class="strip-5-img-link strip-3-img-link d-none" data-lg-size="1406-1390" data-gallery="food"><img src="images/img_50.jpg" alt="Food 50" class="strip-5-img strip-3-img"></a>
         </div>
         <div class="strip-5-explore text-center mt-4" style="padding-bottom: 32px;">
           <a href="single.html" class="btn btn-lg btn-explore">Explore</a>
